deploy/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kickerscore

---
apiVersion: v1
kind: Service
metadata:
  name: kickerscore-db-service
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: kickerscore
    tier: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: kickerscore-backend-service
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: kickerscore
    tier: backend

---
apiVersion: v1
kind: Service
metadata:
  name: kickerscore-frontend-service
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: kickerscore
    tier: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickerscore-db-deployment
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kickerscore
      tier: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kickerscore
        tier: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-persistent-storage
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickerscore-backend-deployment
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kickerscore
      tier: backend
  template:
    metadata:
      labels:
        app: kickerscore
        tier: backend
    spec:
      containers:
      - name: kickerscore-backend
        image: 10.8.0.1:30000/sreitsma/kickerscore:latest
        ports:
          - containerPort: 5000
        resources:
          limits:
            nvidia.com/gpu: 0
            memory: "1024Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "0.1"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickerscore-frontend-deployment
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kickerscore
      tier: frontend
  template:
    metadata:
      labels:
        app: kickerscore
        tier: frontend
    spec:
      containers:
      - name: kickerscore-frontend
        image: 10.8.0.1:30000/sreitsma/kickerscore-frontend:latest
        ports:
          - containerPort: 3000
        resources:
          limits:
            nvidia.com/gpu: 0
            memory: "1024Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "0.1"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 15
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kickerscore-backend-ingress
  namespace: kickerscore
  annotations:
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "basic-auth-secret"
spec:
  rules:
  - http:
      paths:
      - path: /kickerscore
        backend:
          serviceName: kickerscore-backend-service
          servicePort: 5000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kickerscore-frontend-ingress
  namespace: kickerscore
  annotations:
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "basic-auth-secret"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kickerscore-frontend-service
          servicePort: 3000
